k8s/ingress/flask-ingress-ssl.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress-ssl
spec:
  rules:
  - host: tsadimas.dns-cloud.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-clip
            port: 
              number: 8000
  tls:
    - hosts: 
      - tsadimas.dns-cloud.net
      secretName: tls-secret
