k8s/ingress/flask-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
spec:
  rules:
  - host: "wps.tsatalis.cloudns.cl"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: flask-clip
            port:
              number: 8080
